add /criminals/list endpoint
